Improve projects layout: reduce gaps, fix header size, remove broken link, add target blank to project links

--- a/src/static/css/components/_mini-post.scss
+++ b/src/static/css/components/_mini-post.scss
@@ -26,7 +26,7 @@
   @include vendor("flex-direction", "column");
   background: _palette(bg);
   border: solid 1px _palette(border);
-  margin: 0 0 _size(element-margin);
+  margin: 0 0 (_size(element-margin) * 0.5);
 
   .image {
     overflow: hidden;
